[tool.poetry]
name = "runlib"
version = "0.1.0"
description = ""
authors = ["François Steinmetz <fs@hygeos.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
progressbar2 = "*"
pyro4 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
